introduce Marc field validator, default is strict validating using blank as default symbol